fix gap

--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ button:hover {
 
 h1 {
     font-size: 80px;
-    color: red;
     text-shadow: 1px 1px 2px black;
 }
 
@@ -135,6 +134,7 @@ header {
     width: 100%;
     text-transform: capitalize;
     flex-wrap: wrap;
+    gap: 10px;
 }
 
 #content {
